[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Models/OBJ format/rock_largeA.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scenes/Items/Gold.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.446391

[node name="Gold" type="Area"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.108024, 0 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null

[node name="OmniLight" type="OmniLight" parent="MeshInstance"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.765859, 0 )
light_color = Color( 1, 0.752941, 0.509804, 1 )
light_energy = 3.0
shadow_enabled = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Gold_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Gold_body_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
